# Browser-Builders

./: Project Description  README.md  steps_to_follow.txt
MATRIX/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
SearchEngine/: app.py  requirements.txt
SearchEngine/crawler/: crawler.py
SearchEngine/data/: crawled_pages.json  index.json
SearchEngine/indexer/: indexer.py  tokenizer.py
SearchEngine/searcher/: ranking.py  searcher.py
SearchEngine/static/: styles.css
SearchEngine/templates/: index.html
data/: crawled_pages.json  index.json
